# micro-terse

./: .gitignore  BENCHMARKS.md  LICENSE  MODEL_CARD.md  README.md  pyproject.toml
configs/: micro-trained.yaml  micro.yaml
docs/papers/: README.md  terse-micro-technical-report.md
scripts/: chat.py  completion_watcher.sh  continue.py  eval.py  eval_local.py  eval_quick.py  export.py  find_model.py  gen_identity_data.py  gen_synthetic_textbooks.py  identity_proof.py  prep_orpo_data.py  prep_sft_corpus.py  prepare_data.py  run_benchmarks.py  serve.py  serve_ui.py  strip_checkpoint.py  train.py  train_pref.py  train_sft.py
terse/cli/: chat.py
terse/eval/: evaluate.py
terse/export/: gguf.py  gguf_llamacpp.py
terse/model/: attention.py  block.py  config.py  ffn.py  generate.py  moe.py  mtp.py  rmsnorm.py  rope.py  ternary.py  terse_model.py
terse/server/: app.py  gguf_loader.py  identity.py  predict.py  ui_server.py
terse/training/: checkpoint.py  monitor.py  muon.py  optimizer.py  scheduler.py  trainer.py
tests/: conftest.py  test_attention.py  test_chat_cli.py  test_dataset.py  test_export.py  test_generate.py  test_gguf_llamacpp.py  test_gguf_loader.py  test_identity.py  test_model.py  test_moe.py  test_muon.py  test_predict.py  test_server.py  test_sft_encoding.py  test_ternary.py  test_train_step.py  test_ui_server.py
ui/: index.html
